getTriangleAnsatz